hero section finished

--- a/index.html
+++ b/index.html
@@ -12,14 +12,35 @@
     <link rel="stylesheet" href="style.css">
     <title>Emre Aslan</title>
 </head>
-<body class="container">
-    <section id="navigation">
+<body>
+    <header id="navigation" class="container">
         <div class="nav-icon">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </div>
+    </header>
+
+    <section id="hero" class="container">
+
+        <div class="left">
+            <div><p class="spell">I'M EMRE</p></div>
+            <div><h1 class="slogan">Pixels with purpose</h1></div>
+            <div><p class="desc">I work with companies and agencies around the world, building Web sites and application UIs with strong focus on responsive design, accessibility, performance,</p></div>
+            <div class="button">
+                <a href="#">See My Works</a>
+            </div>
+        </div>
+
+        <div class="right">
+            <img src="/img/profil.jpg" alt="profil-photo">
+        </div>
+
+
     </section>
+
+
+
       
 </body>
 </html>
