testimonial section finished

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     
     <section id="services" class="container">
-        <div class="service-heading">
-            <h2 class="heading-services">SERVICES</h2>
+        <div class="service-heading topic-heading">
+            <h2 class="heading-services main-heading" data-outline="SERVICES">SERVICES</h2>
         </div>
         <div class="skills">
             <div class="service service-web">
@@ -78,6 +78,62 @@
                 </div>
                 <h3>SEO</h3>
                 <div class="desc">With SEO, your business wants to increase its visibility in search results on search engines. I also provide SEO services to rank your website.</div>
+            </div>
+        </div>
+    </section>
+
+    <section id="testimonial" class="container">
+        <div class="topic-heading">
+            <h2 class="main-heading" data-outline="TESTIMONIAL">TESTIMONIAL</h2>
+        </div>
+        <div class="all-items">
+
+            <div class="item">
+                <div class="img">
+                    <img src="./img/sayed.jpg" alt="sayed">
+                </div>
+                <h2 class="testimonial-heading">MR. SAYED</h2>
+                <p class="testimonial-subheading">CTO, Tech</p>
+                <div class="testimonial-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z"></path>
+                      </svg>
+                </div>
+                <div class="testimonial-desc">
+                    <p>Emre conveys quality work. She is an excellent individual and an extraordinary cooperative person. He is extremely straightforward and puts all her energy to follow through on schedule.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="img">
+                    <img src="./img/arfan.jpg" alt="arfan">
+                </div>
+                <h2 class="testimonial-heading">SHAIF ARFAN</h2>
+                <p class="testimonial-subheading">CEO, WEBc</p>
+                <div class="testimonial-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z"></path>
+                      </svg>
+                </div>
+                <div class="testimonial-desc">
+                    <p>I've worked with many individuals who are tendentious and driven by things other than the work they're doing. Emre is genuinely energetic about the web and the items she makes for it and that is quite darn marvelous.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="img">
+                    <img src="./img/ayan.jpg" alt="ayan">
+                </div>
+                <h2 class="testimonial-heading">AYAN KHAN</h2>
+                <p class="testimonial-subheading">Singer</p>
+                <div class="testimonial-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z"></path>
+                      </svg>
+                </div>
+                <div class="testimonial-desc">
+                    <p>Emre is a wonderfully creative, collaborative, and gifted developer who excels at creating inclusive digital solutions.</p>
+                </div>
             </div>
         </div>
     </section>
