stats section finished

--- a/index.html
+++ b/index.html
@@ -138,6 +138,30 @@
         </div>
     </section>
 
+
+    <section id="stats" class="container">
+        <div class="topic-heading">
+            <h2 class="main-heading" data-outline="STATS">STATS</h2>
+        </div>
+        <div class="stats-items">
+            <div class="stats-item">
+                <h1 class="number">50+</h1>
+                <h2 class="item-heading">Projects done</h2>
+                <p class="item-desc">I worked on more than 50+ projects. I know how to make things fascinating and eye-catching. Making high performance website is always a sign of mine.</p>
+            </div>
+            <div class="stats-item">
+                <h1 class="number">30+</h1>
+                <h2 class="item-heading">Happy clients</h2>
+                <p class="item-desc">I worked with more than 30+ clients. Client satisfaction is my main priority. I generally attempt to complete the work before the deadline.</p>
+            </div>
+            <div class="stats-item">
+                <h1 class="number">4+</h1>
+                <h2 class="item-heading">Years experience</h2>
+                <p class="item-desc">I worked with more than 30+ clients. Client satisfaction is my main priority. I generally attempt to complete the work before the deadline.</p>
+            </div>
+        </div>
+    </section>
+
       
 </body>
 </html>
