about section finished

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
         </div>
     </section>
 
+
+
     <section id="testimonial" class="container">
         <div class="topic-heading">
             <h2 class="main-heading" data-outline="TESTIMONIAL">TESTIMONIAL</h2>
@@ -139,6 +141,7 @@
     </section>
 
 
+
     <section id="stats" class="container">
         <div class="topic-heading">
             <h2 class="main-heading" data-outline="STATS">STATS</h2>
@@ -163,5 +166,26 @@
     </section>
 
       
+
+    <section id="about" class="container">
+        <div class="topic-heading">
+            <h2 class="main-heading" data-outline="ABOUT">ABOUT</h2>
+        </div>
+        <div class="about-me">
+            <div class="my-card">
+                <div class="card-img"><img src="./img/profil.jpg" alt="emre"></div>
+                <p class="card-text">I’m a freelance web designer and developer based in Istanbul. I love the Web platform and I need to improve it for everybody. What's more, I believe myself to be totally honored that I will assemble it professionally.</p>
+                <h1 class="card-heading">EMRE ASLAN</h1>
+                <p class="card-subheading"><em>CEO of Lionline</em> </p>
+            </div>
+            <div class="my-expertise">
+                <p class="my-expertise-heading">Hi! This is Emre</p>
+                <h1 class="my-expertise-subheading">Freelance Full-Stack Developer</h1>
+                <p class="my-expertise-desc">I work with companies and agencies around the world, building Web sites and application UIs with strong focus on responsive design, accessibility, performance, and the latest in the area of front-end (Javascript, react, gatsby, node, Python, djengo) I also speak and run workshops across the globe, also focusing on CSS, SVG, Responsive Design and accessibility, covering practical tips on how to build full stack using modern tools and techniques that scale and are future-proof.</p>
+                <a class="button-s btn-download-cv"href="#">Download CV</a>
+                <a class="button-s btn-hire-me"href="#">Hire me</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
