projects section finished

--- a/index.html
+++ b/index.html
@@ -187,5 +187,62 @@
             </div>
         </div>
     </section>
+
+    
+    <section id="projects" class="container">
+        <div class="topic-heading">
+            <h2 class="main-heading" data-outline="PROJECTS">PROJECTS</h2>
+        </div>
+        <div class="projects">
+            <div class="item">
+                <div class="left">
+                    <div class="img">
+                        <img src="./img/project-1.jpg" alt="project-1">
+                    </div>
+                </div>
+                <div class="right">
+                    <h1 class="project-heading">Real Chat</h1>
+                    <p class="project-subheading">Online real time chat app.</p>
+                    <p class="project-desc">I made this application for a USA customer. This application is truly Amazing. Here you can chat with your friend constantly inside a secure environment and there will be no information reserved after the end of the session.</p>
+                    <a class="button-s btn-know-more" href="#">Know more</a>
+                    <a class="button-s btn-preview" href="#"><span>Preview</span> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                      </svg></a>
+                </div>
+            </div>
+            <div class="item">
+                <div class="left">
+                    <div class="img">
+                        <img src="./img/project-2.jpg" alt="project-1">
+                    </div>
+                </div>
+                <div class="right">
+                    <h1 class="project-heading">Hotel Time Website</h1>
+                    <p class="project-subheading">A website for hotel time.</p>
+                    <p class="project-desc">Hotel zaman is one of the famous hotel in Chittagong. We created their website. The client wanted a clean and smooth design which I was able to provide at the end of the project.</p>
+                    <a class="button-s btn-know-more" href="#">Know more</a>
+                    <a class="button-s btn-preview" href="#"><span>Preview</span> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                      </svg></a>
+                </div>
+            </div>
+            <div class="item">
+                <div class="left">
+                    <div class="img">
+                        <img src="./img/project-3.jpg" alt="project-1">
+                    </div>
+                </div>
+                <div class="right">
+                    <h1 class="project-heading">Prinazz Website</h1>
+                    <p class="project-subheading">A website for music studio</p>
+                    <p class="project-desc">Piranz is one of the famous music composer in UAE. The challenge was to keep the music environment in the web. It was hard but in the end we provided a good quality website that satisfied the client.</p>
+                    <a class="button-s btn-know-more" href="#">Know more</a>
+                    <a class="button-s btn-preview" href="#"><span>Preview</span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                      </svg></a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
