--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
           </svg>
         </div>
     </header>
+    
+    <div class="scroll-top">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M310.6 182.6c-12.51 12.51-32.76 12.49-45.25 0L192 109.3V480c0 17.69-14.31 32-32 32s-32-14.31-32-32V109.3L54.63 182.6c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l128-128c12.5-12.5 32.75-12.5 45.25 0l128 128C323.1 149.9 323.1 170.1 310.6 182.6z"/></svg>
+    </div>
 
     <section id="nav-content">
         <div class="close-button">
@@ -275,7 +279,7 @@
                 <ul>
                     <li><a href="#hero">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#testimonial">Testimonial</a></li>
                 </ul>
